<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".InfoActivity">

            <TextView
                    android:text="@string/thanks_using_app"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/thanks"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:textSize="18sp"/>

            <TextView
                    android:text="@string/explanations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/explanations"
                    android:linksClickable="true"
                    android:autoLink="web"
                    android:padding="16dp"
                    android:textSize="16sp"/>

            <Button
                    android:text="@string/donate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/donate"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.AppCompat.Button.Colored"/>
        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>