<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:id="@+id/checkingTextView"
                android:text="@string/checking_apps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/progressBar"
                android:visibility="visible"/>

        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:indeterminate="true"
                android:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/appList"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:visibility="gone"
                android:orientation="vertical"
                tools:listitem="@layout/application_item"
                tools:visibility="visible"
                app:layout_constraintTop_toBottomOf="@+id/warning">

        </androidx.recyclerview.widget.RecyclerView>

        <ImageView
                android:id="@+id/warning"
                android:src="@drawable/ic_warning_red_48dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/accessibility_warning_icon"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/infectedApps"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@+id/warning"
                app:layout_constraintStart_toEndOf="@+id/warning"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/warning"
                tools:text="1 infected app(s) found"/>

        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="horizontal"/>

        <ImageView
                android:id="@+id/ok"
                android:src="@drawable/ic_check_circle_green_144dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                android:contentDescription="@string/accessibility_ok_icon"
                android:visibility="gone"/>

        <TextView
                android:id="@+id/noInfectedApps"
                android:text="@string/no_infected_app_found"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>